# agentic-code-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
docs/: AGENT_ARCHITECTURE.md  API_REFERENCE.md  DEVELOPER_GUIDE.md  INDEXING_AND_PARSING.md  USER_GUIDE.md
scripts/: evaluate_search.py  monitor_agent.py  verify_agent.py  verify_parser.py  visualize_graph.py
src/: cli.py  config.py  main.py
src/agent/: core.py  graph.py  model.py  nodes.py  prompts.py  state.py  tools.py
src/agent/prompts/: __init__.py  loader.py  schemas.py
src/agent/prompts/templates/: _shared.yaml  aggregate.yaml  executor.yaml  file_selection.yaml  plan.yaml  refine.yaml  synthesize.yaml
src/indexing/: file_registry.py  indexer.py  parser.py  schema.py  vector_store.py
src/indexing/parsers/: __init__.py  cpp_parser.py  python_parser.py
src/indexing/storage/: graph_store.py  keyword_store.py  vector_store.py
src/indexing/strategies/: base_strategy.py  graph_strategy.py  keyword_strategy.py  vector_strategy.py
src/profiling/: builder.py  profile_store.py  renderer.py  schema.py  synthesizer.py
src/retrieval/: search_engine.py
src/storage/: keyword_store.py  vector_store.py
src/tools/: filesystem.py  grep_tool.py  related.py  search_tool.py  structure.py  symbol.py
src/utils/: __init__.py  logger.py
tests/: README.md  conftest.py  test_agent_e2e.py  test_agent_graph.py  test_agent_nodes.py  test_agent_tools.py  test_incremental_indexing.py  test_integration.py  test_parser.py  test_profile_builder.py  test_profile_renderer.py  test_profile_store.py  test_vector_store.py
