[project]
name = "os-devel-agent"
version = "0.1.0"
description = "AI Agent for OS Development with Code RAG capabilities"
requires-python = ">=3.9"
authors = [
    {name = "JuneHyung-Kim"}
]
license = {text = "MIT"}

dependencies = [
    "openai",
    "google-generativeai",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "chromadb",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
