[project]
name = "code-rag-agent"
version = "0.1.0"
description = "AI Agent for understanding large codebases with Code RAG"
requires-python = ">=3.9"
authors = [
    {name = "JuneHyung-Kim"}
]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "openai>=1.54.0,<2.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "tree-sitter>=0.23.0,<1.0.0",
    "tree-sitter-python>=0.23.0,<1.0.0",
    "tree-sitter-c>=0.23.0,<1.0.0",
    "tree-sitter-cpp>=0.23.0,<1.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "pydantic>=2.9.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "networkx>=3.0.0,<4.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "live: tests that make real LLM API calls (deselected by default, run with: pytest -m live -s)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
